Actualización del paquete

--- a/nlppen/Steven-Seleccion.ipynb
+++ b/nlppen/Steven-Seleccion.ipynb
@@ -234,6 +234,27 @@
     "legalidad = s.sub_busqueda(terminos_legalidad, preprocess=solo_portanto)\n",
     "legalidad.columns"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TAGS = ['ADJ','ADP','ADV','AUX','CONJ','CCONJ','DET','INTJ','PART','PRON','PUNCT','SCONJ']\n",
+    "INCLUIR = ['ADJ','ADV','NOUN','PROPN','VERB']\n",
+    "pattern1 = [{\"POS\": {\"IN\": ['NOUN', 'PROPN']}}, {\"POS\": {\"IN\": TAGS}, \"OP\": \"*\"}, {\"POS\": \"VERB\", \"OP\": \"+\"}]\n",
+    "pattern2 = [{\"POS\": \"VERB\"}, {\"POS\": {\"IN\": TAGS}, \"OP\": \"*\"}, {\"POS\": {\"IN\": ['NOUN', 'PROPN']}, \"OP\": \"+\"}]\n",
+    "\n",
+    "from load_spacy import get_Spacy\n",
+    "nlp = get_Spacy('es_core_news_lg')\n",
+    "matcher = Matcher(nlp.vocab)\n",
+    "matcher.add(\"pattern\", patterns)\n",
+    "\n",
+    "matches = matcher(entr)       \n",
+    "\n",
+    "for match_id, start, end in matches:"
+   ]
   }
  ],
  "metadata": {
