--- a/Notebook-KOR.ipynb
+++ b/Notebook-KOR.ipynb
@@ -132,7 +132,7 @@
     "\n",
     "\n",
     "seleccion = Seleccion(terminos, spark, parquet_path='../../src/datasets/complete', datasets_path='./datasets/estructurales')\n",
-    "seleccion.filtrar_sentencias(preprocess=solo_portanto)\n",
+    "seleccion.filtrar_sentencias(preprocess=solo_portanto, keepRowEmpty=True)\n",
     "\n",
     "estructurales = SentenciasEstructurales(seleccion)"
    ]
@@ -246,6 +246,11 @@
     "}\n",
     "estructurales.plazosDefinidos(columnas, True)\n",
     "\n",
+    "columnas = {\n",
+    "    'FechaSolicitud' : TimestampType(),\n",
+    "}\n",
+    "\n",
+    "estructurales.extrarFechaRecibido(columnas, True)\n",
     "#Sobreescribir el dataset de filtro de sentencias con las nuevas columnas\n",
     "estructurales.seleccion.guardarDatos()"
    ]
