Extraccion de instrumentos internacionales y derechos
Extraccion de instrumentos internacionales y derechos

--- a/Notebook-KOR.ipynb
+++ b/Notebook-KOR.ipynb
@@ -217,6 +217,33 @@
     "}\n",
     "\n",
     "estructurales.extrarFechaRecibido(columnas, True)\n",
+    "\n",
+    "columnas = {\n",
+    "    'num resolucion' : StringType()\n",
+    "}\n",
+    "\n",
+    "estructurales.extraerNumeroSentencia(columnas, True)\n",
+    "\n",
+    "columnas = {\n",
+    "    'inst internacionales' : ArrayType(StringType())\n",
+    "}\n",
+    "\n",
+    "estructurales.extraerInstrumentosInternacionales(columnas, True)\n",
+    "\n",
+    "columnas = {\n",
+    "    'derechos Norm' : ArrayType(StringType()),\n",
+    "    'derechos GenXPat' : ArrayType(StringType())\n",
+    "}\n",
+    "estructurales.extraerDerechos(columnas, True)\n",
+    "\n",
+    "columnas = {\n",
+    "    'derechos Acotados' : ArrayType(StringType()),\n",
+    "    'derechos General' : ArrayType(StringType()),\n",
+    "    'derechos Fundamental' : ArrayType(StringType()),\n",
+    "    'derechos Humano' : ArrayType(StringType())\n",
+    "}\n",
+    "\n",
+    "estructurales.extraerDerechosSinNormalizar(columnas, True)\n",
     "#Sobreescribir el dataset de filtro de sentencias con las nuevas columnas"
    ]
   },
