Extraccion de citas con fecha
Extraccion de citas con fecha

--- a/Notebook-KOR.ipynb
+++ b/Notebook-KOR.ipynb
@@ -282,6 +282,11 @@
     "}\n",
     "\n",
     "estructurales.extraerDerechosSinNormalizar(columnas, True)\n",
+    "\n",
+    "columnas = {\n",
+    "        'citasFechas' : MapType(StringType(), TimestampType())\n",
+    "    }\n",
+    "    estructurales.extrarCitaSentenciasFecha(columnas, True)\n",
     "#Sobreescribir el dataset de filtro de sentencias con las nuevas columnas"
    ]
   },
