Agregar ID sentencia Nexus
Agregar ID sentencia Nexus
Agregar Expediente oficial
Agregar número de voto oficial

--- a/Notebook-KOR.ipynb
+++ b/Notebook-KOR.ipynb
@@ -281,7 +281,14 @@
     "columnas = {\n",
     "        'citasFechas' : MapType(StringType(), TimestampType())\n",
     "    }\n",
-    "    estructurales.extrarCitaSentenciasFecha(columnas, True)\n",
+    "estructurales.extrarCitaSentenciasFecha(columnas, True)\n",
+    "\n",
+    "columnas = {\n",
+    "        'id_sentencia' : StringType(),\n",
+    "        'num_doc_oficial' : StringType(),\n",
+    "        'expediente_oficial' : StringType()\n",
+    "    }\n",
+    "estructurales.agregarIDSentencia(columnas, sentencias, True)\n",
     "#Sobreescribir el dataset de filtro de sentencias con las nuevas columnas"
    ]
   },
