--- a/Notebook-KOR.ipynb
+++ b/Notebook-KOR.ipynb
@@ -279,16 +279,17 @@
     "estructurales.extraerDerechosSinNormalizar(columnas, True)\n",
     "\n",
     "columnas = {\n",
-    "        'citasFechas' : MapType(StringType(), TimestampType())\n",
-    "    }\n",
-    "estructurales.extrarCitaSentenciasFecha(columnas, True)\n",
-    "\n",
-    "columnas = {\n",
     "        'id_sentencia' : StringType(),\n",
     "        'num_doc_oficial' : StringType(),\n",
     "        'expediente_oficial' : StringType()\n",
     "    }\n",
     "estructurales.agregarIDSentencia(columnas, sentencias, True)\n",
+    "\n",
+    "columnas = {\n",
+    "        'citasVotDate' : MapType(StringType(), TimestampType()),\n",
+    "        'citasIDVoto' : MapType(StringType(), StringType())\n",
+    "    }\n",
+    "    estructurales.extrarCitaSentenciasFecha(columnas, sentencias, True)\n",
     "#Sobreescribir el dataset de filtro de sentencias con las nuevas columnas"
    ]
   },
