Mejoras en el código
- Ahora se puede sobreescribir columnas en el dataset tanto de spark como de terminos de selecciona. Existe una bandera llamada overwriteColumns, Colocarla en True si desea que sobreescriba esa columna en el dataset.
- Mejorado el proceso de recolección de plazos
- Incluido el proceso de extracción de palabras de seguimiento: plan de accion, plan remedial, cronograma de accion, cronograma remedial, etc.

--- a/Notebook-KOR.ipynb
+++ b/Notebook-KOR.ipynb
@@ -139,11 +139,11 @@
     "anno_sup = 2021\n",
     "\n",
     "terminos = {\n",
-    "    'seguimiento': [r'\\bseguimiento\\b'],\n",
-    "    'se ordena': [r'\\bse ordena\\b'],\n",
-    "    'plan': [r'\\bplan\\b'],\n",
-    "    'plazo': [r'\\bplazo\\b']\n",
-    "}\n",
+    "        'se ordena': [r'\\bse ordena\\b', r'\\bse le ordena\\b', r'\\bse les ordena\\b'],\n",
+    "        'se condena': [r'\\bse condena\\b', r'\\bse le condena\\b', r'\\bse les condena\\b'],\n",
+    "        'plan': [r'\\bplan\\b'],\n",
+    "        'plazo': [r'\\bplazo\\b', r'\\bt[éermino (improrrogable)? (de)?\\b']\n",
+    "    }\n",
     "\n",
     "\n",
     "seleccion = Seleccion(terminos, spark, parquet_path='../../src/datasets/complete', datasets_path='./datasets/estructurales2', filtro=f'anno >= {anno_inf} AND anno < {anno_sup}')\n",
@@ -202,9 +202,9 @@
     "estructurales.extraerExtension(columnas, True)\n",
     "\n",
     "columnas = {\n",
-    "    'plazosDefinidos' : ArrayType(TimestampType())\n",
-    "}\n",
-    "estructurales.plazosDefinidos(columnas, True)\n",
+    "        'plazosDefinidos' : ArrayType(TimestampType())\n",
+    "    }\n",
+    "    estructurales.plazosDefinidos(columnas, True)\n",
     "\n",
     "columnas = {\n",
     "    'FechaSolicitud' : TimestampType(),\n",
@@ -262,7 +262,19 @@
     "        'citasIDVoto' : MapType(StringType(), StringType())\n",
     "    }\n",
     "    estructurales.extrarCitaSentenciasFecha(columnas, sentencias, True)\n",
-    "#Sobreescribir el dataset de filtro de sentencias con las nuevas columnas"
+    "\n",
+    "#Palabras de seeguimiento de acuerdo al correo de Eve.\n",
+    "columnas = {\n",
+    "        'seguimientoExt' : StringType(), #Texto extraido de seguimiento\n",
+    "        'seguimientoValue' : IntegerType() #Cantidad de ocurrencias\n",
+    "    }\n",
+    "\n",
+    "#NOTA IMPORTANTE PARA KENNETH\n",
+    "#Plazos hay que correrlo de nuevo, las lines de abajo sobreescriben la columna 'plazosDefinidos' que se corrió previamente\n",
+    "columnas = {\n",
+    "        'plazosDefinidos' : ArrayType(TimestampType()) #Correción día 27-11-2021. Correr de nuevo\n",
+    "    }\n",
+    "    estructurales.plazosDefinidos(columnas, actualizar_sdf=True, overwriteColumns=True)"
    ]
   },
   {
