--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -12,28 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "id": "cc2ec801-fdee-413e-aca9-8ee8e77e0cac",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-28T00:01:35.307597Z",
-     "iopub.status.busy": "2021-11-28T00:01:35.307161Z",
-     "iopub.status.idle": "2021-11-28T00:01:38.495705Z",
-     "shell.execute_reply": "2021-11-28T00:01:38.495174Z",
-     "shell.execute_reply.started": "2021-11-28T00:01:35.307566Z"
+     "iopub.execute_input": "2021-11-30T14:58:50.735235Z",
+     "iopub.status.busy": "2021-11-30T14:58:50.734965Z",
+     "iopub.status.idle": "2021-11-30T14:58:53.302058Z",
+     "shell.execute_reply": "2021-11-30T14:58:53.301586Z",
+     "shell.execute_reply.started": "2021-11-30T14:58:50.735193Z"
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -63,26 +54,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "id": "b819481b-6ee8-42c7-9add-c19ceba43563",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-28T00:01:38.497135Z",
-     "iopub.status.busy": "2021-11-28T00:01:38.496936Z",
-     "iopub.status.idle": "2021-11-28T00:01:38.545621Z",
-     "shell.execute_reply": "2021-11-28T00:01:38.545106Z",
-     "shell.execute_reply.started": "2021-11-28T00:01:38.497122Z"
+     "iopub.execute_input": "2021-11-30T14:58:53.303036Z",
+     "iopub.status.busy": "2021-11-30T14:58:53.302812Z",
+     "iopub.status.idle": "2021-11-30T14:58:55.588729Z",
+     "shell.execute_reply": "2021-11-30T14:58:55.588256Z",
+     "shell.execute_reply.started": "2021-11-30T14:58:53.303022Z"
     },
     "tags": []
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "21/11/30 14:58:54 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "21/11/30 14:58:54 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'http://7416269fd645:4040'"
+       "'http://7416269fd645:4041'"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,15 +116,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "id": "2a92cddd-4b24-4bdf-85d7-ceabe68d009d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-28T00:01:38.547033Z",
-     "iopub.status.busy": "2021-11-28T00:01:38.546833Z",
-     "iopub.status.idle": "2021-11-28T00:01:38.590722Z",
-     "shell.execute_reply": "2021-11-28T00:01:38.590230Z",
-     "shell.execute_reply.started": "2021-11-28T00:01:38.547019Z"
+     "iopub.execute_input": "2021-11-30T14:58:55.589803Z",
+     "iopub.status.busy": "2021-11-30T14:58:55.589464Z",
+     "iopub.status.idle": "2021-11-30T14:58:55.646516Z",
+     "shell.execute_reply": "2021-11-30T14:58:55.646067Z",
+     "shell.execute_reply.started": "2021-11-30T14:58:55.589788Z"
     },
     "tags": []
    },
@@ -171,15 +173,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "id": "2efc878d-2fc1-4743-b8ea-c3fecf943042",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-28T00:01:38.594034Z",
-     "iopub.status.busy": "2021-11-28T00:01:38.593668Z",
-     "iopub.status.idle": "2021-11-28T00:01:38.644894Z",
-     "shell.execute_reply": "2021-11-28T00:01:38.644402Z",
-     "shell.execute_reply.started": "2021-11-28T00:01:38.594020Z"
+     "iopub.execute_input": "2021-11-30T14:59:02.347630Z",
+     "iopub.status.busy": "2021-11-30T14:59:02.347305Z",
+     "iopub.status.idle": "2021-11-30T14:59:02.396860Z",
+     "shell.execute_reply": "2021-11-30T14:59:02.396430Z",
+     "shell.execute_reply.started": "2021-11-30T14:59:02.347615Z"
     },
     "tags": []
    },
@@ -278,15 +280,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "id": "55f4a79a-ee35-4147-bca8-5d0bfd95dc3b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-28T00:04:24.073221Z",
-     "iopub.status.busy": "2021-11-28T00:04:24.072973Z",
-     "iopub.status.idle": "2021-11-28T00:04:25.878257Z",
-     "shell.execute_reply": "2021-11-28T00:04:25.877736Z",
-     "shell.execute_reply.started": "2021-11-28T00:04:24.073207Z"
+     "iopub.execute_input": "2021-11-30T14:59:10.370972Z",
+     "iopub.status.busy": "2021-11-30T14:59:10.370734Z",
+     "iopub.status.idle": "2021-11-30T14:59:10.413771Z",
+     "shell.execute_reply": "2021-11-30T14:59:10.413317Z",
+     "shell.execute_reply.started": "2021-11-30T14:59:10.370959Z"
     },
     "tags": []
    },
@@ -297,15 +299,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "id": "e48527a2-2c72-4f99-85f8-4f945ae86a3e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-28T00:01:38.688027Z",
-     "iopub.status.busy": "2021-11-28T00:01:38.687612Z",
-     "iopub.status.idle": "2021-11-28T00:01:38.726947Z",
-     "shell.execute_reply": "2021-11-28T00:01:38.726391Z",
-     "shell.execute_reply.started": "2021-11-28T00:01:38.688013Z"
+     "iopub.execute_input": "2021-11-30T14:59:12.687203Z",
+     "iopub.status.busy": "2021-11-30T14:59:12.686952Z",
+     "iopub.status.idle": "2021-11-30T14:59:12.728996Z",
+     "shell.execute_reply": "2021-11-30T14:59:12.728472Z",
+     "shell.execute_reply.started": "2021-11-30T14:59:12.687189Z"
     },
     "tags": []
    },
@@ -325,15 +327,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "id": "34ce4d81-4441-4045-9594-6e8f6461f6d3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-28T00:01:38.727725Z",
-     "iopub.status.busy": "2021-11-28T00:01:38.727622Z",
-     "iopub.status.idle": "2021-11-28T00:01:38.767185Z",
-     "shell.execute_reply": "2021-11-28T00:01:38.766637Z",
-     "shell.execute_reply.started": "2021-11-28T00:01:38.727713Z"
+     "iopub.execute_input": "2021-11-30T14:59:14.751663Z",
+     "iopub.status.busy": "2021-11-30T14:59:14.751426Z",
+     "iopub.status.idle": "2021-11-30T14:59:14.795656Z",
+     "shell.execute_reply": "2021-11-30T14:59:14.795165Z",
+     "shell.execute_reply.started": "2021-11-30T14:59:14.751649Z"
     },
     "tags": []
    },
@@ -362,15 +364,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 8,
    "id": "911f7eba-fdb3-4bdf-b28a-78203c1c61c8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-28T00:19:06.662518Z",
-     "iopub.status.busy": "2021-11-28T00:19:06.661497Z",
-     "iopub.status.idle": "2021-11-28T00:19:09.100191Z",
-     "shell.execute_reply": "2021-11-28T00:19:09.099637Z",
-     "shell.execute_reply.started": "2021-11-28T00:19:06.662294Z"
+     "iopub.execute_input": "2021-11-30T14:59:15.920062Z",
+     "iopub.status.busy": "2021-11-30T14:59:15.919818Z",
+     "iopub.status.idle": "2021-11-30T14:59:18.348521Z",
+     "shell.execute_reply": "2021-11-30T14:59:18.348082Z",
+     "shell.execute_reply.started": "2021-11-30T14:59:15.920049Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "if not ejecutar:\n",
+    "    seleccion = Seleccion({}, spark, parquet_path='./dataset/procesado', datasets_path='./datasets/estructuralesx')\n",
+    "    estructurales = SentenciasEstructurales(seleccion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "08ae0870-db99-42e4-bfe7-41a7f1613665",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-11-30T14:59:19.981865Z",
+     "iopub.status.busy": "2021-11-30T14:59:19.981563Z",
+     "iopub.status.idle": "2021-11-30T14:59:21.471080Z",
+     "shell.execute_reply": "2021-11-30T14:59:21.470606Z",
+     "shell.execute_reply.started": "2021-11-30T14:59:19.981848Z"
     },
     "tags": []
    },
@@ -381,29 +404,7 @@
      "text": [
       "                                                                                \r"
      ]
-    }
-   ],
-   "source": [
-    "if not ejecutar:\n",
-    "    seleccion = Seleccion({}, spark, parquet_path='./dataset/procesado', datasets_path='./datasets/estructuralesx')\n",
-    "    estructurales = SentenciasEstructurales(seleccion)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "id": "08ae0870-db99-42e4-bfe7-41a7f1613665",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-11-28T00:19:09.102447Z",
-     "iopub.status.busy": "2021-11-28T00:19:09.102246Z",
-     "iopub.status.idle": "2021-11-28T00:19:10.358514Z",
-     "shell.execute_reply": "2021-11-28T00:19:10.358095Z",
-     "shell.execute_reply.started": "2021-11-28T00:19:09.102434Z"
     },
-    "tags": []
-   },
-   "outputs": [
     {
      "data": {
       "text/html": [
@@ -468,13 +469,61 @@
        "4  sen-1-0007-853795     180063820007CO"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "estructurales.seleccion.sdf.select(\"id_sentencia\", \"expediente_oficial\").toPandas().head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "07893ccc-cb9a-4347-bcc4-dc8af82c3596",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-11-30T14:59:35.036582Z",
+     "iopub.status.busy": "2021-11-30T14:59:35.036325Z",
+     "iopub.status.idle": "2021-11-30T14:59:35.080069Z",
+     "shell.execute_reply": "2021-11-30T14:59:35.079626Z",
+     "shell.execute_reply.started": "2021-11-30T14:59:35.036568Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "s = estructurales.seleccion.sdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "aa0a6eb6-5623-43b6-9361-2fe1cc18370f",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-11-30T14:59:59.618120Z",
+     "iopub.status.busy": "2021-11-30T14:59:59.617795Z",
+     "iopub.status.idle": "2021-11-30T15:00:00.305101Z",
+     "shell.execute_reply": "2021-11-30T15:00:00.304594Z",
+     "shell.execute_reply.started": "2021-11-30T14:59:59.618106Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "631"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.filter(s.plazosDefinidos.isNotNull()).count()"
    ]
   },
   {
