Extraer sub tema de considerando.
Ahora se extrae el subtema de los considerandos de acuerdo a los números romanos que aparecen.

--- a/Notebook-KOR.ipynb
+++ b/Notebook-KOR.ipynb
@@ -459,6 +459,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "5cc873de-dccf-4e52-a314-b34fe866eb82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Agregar SUB TEMA CONSIDERANDO\n",
+    "columnas = {\n",
+    "        'subtemaConsiderando' :  ArrayType(StringType())\n",
+    "    }\n",
+    "    estructurales.extraerSubtemaConsiderando(columnas, True, False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "id": "997e42d6-6815-4ebb-ab20-de50bd08ce4b",
    "metadata": {
